更新了JSON解析逻辑、日志等
- 修改了plugin/background.js文件 ：

- 优化了JSON解析逻辑，使用括号计数法处理嵌套JSON结构
- 移除了对本地快速分类的依赖，完全依赖LLM返回的JSON
- 清理了不必要的硬编码分类函数
- 改进了错误处理机制
- 修改了plugin/popup.js文件 ：

- 改进了日志输出，将原来的一条日志分成了四条更清晰的日志
- 明确了最终发给AI的内容顺序（系统提示词在前，用户输入在后）
- 分别输出系统提示词和用户输入的内容

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -267,6 +267,8 @@
       overflow-y: auto;
       /* 移除最大高度限制，让输入框能根据容器自由调整高度 */
       max-height: none;
+      /* 允许动态设置高度，不使用固定的100% */
+      height: auto;
     }
     
     .chat-input:focus {
